# publicdotcom-cli

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: order.single-leg.cash-only.json  order.single-leg.market-buy.json  order.single-leg.tax-lot-matching.json  strategy-quote.request.json
scripts/: generate_client.py
src/publicdotcom_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  output.py  payloads.py
src/publicdotcom_cli/_generated/: __init__.py
src/publicdotcom_cli/_generated/models/: __init__.py  bar.py  bars_response.py  com_hellopublic_core_dto_base_64_file.py  com_hellopublic_holdingsystem_core_types_option_price_increment.py  com_hellopublic_hstier_2_service_taxlots_api_instrument_specific_tax_lot_details.py  com_hellopublic_hstier_2_service_taxlots_api_option_specific_tax_lot_details.py  com_hellopublic_hstier_2_service_taxlots_api_option_specific_tax_lot_details_option_type.py  com_hellopublic_hstier_2_service_taxlots_api_order_reference.py  com_hellopublic_hstier_2_service_taxlots_api_out_of_date_status.py  com_hellopublic_hstier_2_service_taxlots_api_out_of_date_status_description.py  com_hellopublic_hstier_2_service_taxlots_api_out_of_date_status_type.py  com_hellopublic_hstier_2_service_taxlots_api_unrealized_lot.py  com_hellopublic_hstier_2_service_taxlots_api_unrealized_lot_summary.py  com_hellopublic_hstier_2_service_taxlots_api_unrealized_lots_detail_response.py  com_hellopublic_hstier_2_service_taxlots_api_unrealized_lots_summary_response.py  com_hellopublic_trading_core_quote_bond_quote_detail.py  com_hellopublic_trading_core_quote_quote_specific_detail.py  com_hellopublic_trading_core_quote_signed_quote.py  com_hellopublic_trading_core_quote_signed_quote_uptick_rule.py  com_hellopublic_userapiauthservice_api_personal_create_access_token_request.py  com_hellopublic_userapiauthservice_domain_error_error_body.py  (+129 more)
tests/: test_cli.py  test_client.py  test_config.py  test_payloads.py
(+23 files in other folders)
