[project]
name = "publicdotcom-cli"
version = "1.1.0"
description = "Command-line client for the Public.com Trading API"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Public.com", email = "developers@public.com" },
]
maintainers = [
    { name = "Public.com", email = "developers@public.com" },
]
keywords = [
    "api",
    "brokerage",
    "cli",
    "crypto",
    "options",
    "public.com",
    "stocks",
    "trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Utilities",
]
dependencies = [
    "attrs>=23.2.0",
    "httpx>=0.28.0",
    "keyring>=25.0.0",
    "platformdirs>=4.0.0",
    "python-dateutil>=2.8.2",
    "rich>=13.7.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[project.scripts]
public = "publicdotcom_cli.cli:main"

[project.urls]
Homepage = "https://github.com/publicdotcom/publicdotcom-cli"
Repository = "https://github.com/publicdotcom/publicdotcom-cli"
Issues = "https://github.com/publicdotcom/publicdotcom-cli/issues"
"Public.com API" = "https://public.com/api"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/publicdotcom_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/publicdotcom_cli/_generated"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
